# Sovereign-OS

./: .dockerignore  .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING.md  Dockerfile  README.md  SECURITY.md  charter.default.yaml  charter.example.yaml  docker-compose.yml  kill_port_8000.bat  pyproject.toml  requirements.txt  run_command_center.bat  run_paid_demo.bat  run_paid_demo.ps1  run_web_ui.bat
.github/: PULL_REQUEST_TEMPLATE.md
charters/: README.md  The_Analyst.yaml  The_Freelancer.yaml  The_Influencer.yaml
docs/: ARCHITECTURE_FAQ.md  AUDIT_PROOF.md  AUTONOMY.md  BACKENDS.md  BACKUP.md  CATEGORIES.md  CEO_CFO_PROFITABILITY.md  CHARTER.md  CLAWTASKS.md  CONFIG.md  CONNECTORS.md  COST.md  DEMO_AUTO_CONNECT_AND_EMAIL.md  DEMO_SCRIPT.md  DEPLOY.md  E2E.md  FUTURE_DEVELOPMENT.md  GOOD_FIRST_ISSUES.md  INGEST_BRIDGE.md  MCP_SELF_HIRING.md  METRICS.md  MONETIZATION.md  MULTI_INSTANCE.md  OPEN_SOURCE_READY_PLAN.md  OPTIMIZATION_ROADMAP.md  OVERSIGHT.md  PAID_DEMO.md  PAYMENTS.md  PHASE6.md  PLATFORMS.md  POSITIONING.md  QUICKSTART.md  REDDIT_SETUP_GUIDE.md  RELEASE.md  WORKER.md  X402.md
examples/: README.md  category_demo.py  clawtasks_loop_demo.py  coding_bounty_demo.py  demo.bat  demo.sh  demo_full_flow.ps1  demo_full_flow.sh  demo_paid_job.bat  demo_paid_job.ps1  freelancer.yaml  ingest_demo_orders.json  ingest_example.json  oversight_demo.py  oversight_e2e.py
scripts/: stripe_smoke.py
sovereign_os/: __init__.py  cli.py
tests/: conftest.py  test_agent_backend.py  test_allocator.py  test_apb_delivery.py  test_apb_source.py  test_audit_cost_guard.py  test_auditor.py  test_auto_tools.py  test_bidding.py  test_botbounty_delivery.py  test_category_architecture.py  test_clawtasks_ingest.py  test_clawtasks_preflight.py  test_cli_categories.py  test_compliance.py  test_cost_model.py  test_cost_tracing.py  test_e2e_pipeline.py  test_economics_and_repair.py  test_edge_cases.py  test_email_connector.py  test_figma_connector.py  (+36 more)
(+128 files in other folders)
