[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "sovereign-os"
version = "0.3.0"
description = "A General-Purpose Autonomous Corporation Framework"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"
authors = [{ name = "Sovereign-OS" }]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",
    "pyyaml>=6.0.2",
    "rich>=13.0.0",
    "textual>=0.47.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.24,<0.28",
]
llm = [
    "openai>=1.0.0",
    "anthropic>=0.34.0",
]
memory = [
    "chromadb>=0.4.0",
]
telemetry = [
    "opentelemetry-api>=1.20.0",
    "opentelemetry-sdk>=1.20.0",
    "prometheus-client>=0.19.0",
]
deploy = [
    "redis>=5.0.0",
]
payments = [
    "stripe>=10.0.0",
]

[project.scripts]
sovereign = "sovereign_os.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sovereign_os*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["."]
